--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -93,6 +93,10 @@
                         <div class="chart-description">You have used 80% of your available spots. <br>
                             Upgrade plan to monitor more vendors.</div>
                     </div>
+                    <div class="trending-class">
+                        <mat-icon>trending_up</mat-icon>
+                        <span>10%</span>
+                    </div>
                 </div>
                 <div class="chart-footer">
                     <div>
