--- a/src/app/side-bar/side-bar.component.scss
+++ b/src/app/side-bar/side-bar.component.scss
@@ -19,7 +19,7 @@
         }
 
         .active {
-            background-color: #cccccc6b;
+            background-color: var(--btnBorder);
         }
     }
 
