--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -44,6 +44,7 @@
             display: flex;
             flex-direction: row;
             gap: 5px;
+            position: relative;
 
             .bar-chart {
                 flex: 70;
@@ -126,6 +127,13 @@
                         }
                     }
                 }
+            }
+
+            .trending-class {
+                position: absolute;
+                color: #50ae6e;
+                display: flex;
+                right: 10px;
             }
         }
     }
